--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -4,24 +4,21 @@
 #   The weight parameter defines the order that the links will appear in.
 
 main:
-  - name: Demo
+  - name: Home(主页)
     url: '#about'
     weight: 10
-  - name: Posts
+  - name: Experience(经历)
     url: '#posts'
     weight: 20
-  - name: Projects
+  - name: Blogs(博客)
     url: '#projects'
     weight: 30
-  - name: Talks
+  - name: Publications(论文)
     url: '#talks'
     weight: 40
-  - name: Publications
-    url: '#featured'
-    weight: 50
-  - name: Courses
+  - name: Courses(课程)
     url: courses/
-    weight: 60
-  - name: Contact
+    weight: 50
+  - name: Contact(联系)
     url: '#contact'
-    weight: 70
+    weight: 60
